--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,13 +2,14 @@
   text-align: center;
   background: #242222;
   color: #fff;
-  height: 40px;
+  height: 45px;
   padding: 10px;
+  font-size: 1rem;
 }
 
 .navbar {
   background: #048d1bea;
-  height: 40px;
+  height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,17 +17,8 @@
 }
 
 .navbar-logo {
-  color: #fff;
-  justify-self: start;
-  margin-left: 20px;
-  cursor: pointer;
-  text-decoration: none;
-  padding-left: 60px;
-}
-
-.fa-firstdraft {
-  margin-left: 0.5rem;
-  font-size: 1.6rem;
+  align-items: left;
+  height: 105px;
 }
 
 .nav-shopping-category {
@@ -39,12 +31,12 @@
 .nav-menu {
   display: grid;
   grid-template-columns: repeat(8, auto);
-  grid-gap: 20px;
+  grid-gap: 10px;
   list-style: none;
   text-align: center;
-  width: 91.5vw;
+  width: 90vw;
   justify-content: end;
-  margin-right: -6rem;
+  margin-right: -1rem;
 }
 
 .nav-item {
@@ -112,13 +104,6 @@
   .nav-links:hover {
     background-color: #1888ff;
     border-radius: 0;
-  }
-
-  .navbar-logo {
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: translate(25%, 50%);
   }
 
   .menu-icon {
